--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,38 +122,50 @@ body{
     padding: 14px;
     color: var(--tb-light);
 }
-/* /stylebanner link */
+/* /stylebanner */
 
 /* #endregion Header */
 
 /* #region section banner */
 .section_banner {
-    height: 300px;
-    background-color: orange;
+    height: 400px;
+  /*   background-color: orange; */
     display: flex;
     align-items: center;
     justify-content:center;
 }
 
 .container_banner{
-    height: 200px;  
-    width: 55%;
-    background-color: aqua;
+    height: 300px;  
+    width: 60%;
+    /* background-color: aqua; */
     display: flex;
- 
-
 }
 
 .image_banner{
     width: 65%;
     height: 100%;
-    background-color: beige;
+    margin-right: 1rem;
+    display: flex;
+    
+
 }
 
 .text_banner{
+    height: 100%;
+    color: var(--tb-footer);
+    padding: 1rem;
+}
+
+.text_banner2{
     width: 35%;
     height: 100%;
-    background-color: rgb(62, 17, 104);
+    color: var(--tb-footer);
+}
+
+.banner_p p{
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 /* #endregion section banner */
 
@@ -239,5 +251,4 @@ body{
     width: 35px;
 }
 /* #endregion banner footer */
-
 
