--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,7 @@
     --tb-header: #3460e9;
     --tb-light: #ffffff;
     --tb-footer: #23272a;
+    --tb-bottom: #8ea1e1;
 }
 
 body{
@@ -79,11 +80,11 @@ body{
 }
    
 .login {
-       background-color: var(--tb-light);
-       height: 100%;
-       width: 70px;
-       border-radius: 40px;
-       border: none;
+    background-color: var(--tb-light);
+    height: 100%;
+    width: 70px;
+    border-radius: 40px;
+    border: none;
 }
 
 .jumbo{
@@ -143,12 +144,10 @@ body{
 }
 
 .image_banner{
-    width: 65%;
+    width: 60%;
     height: 100%;
     margin-right: 1rem;
     display: flex;
-    
-
 }
 
 .text_banner{
@@ -157,10 +156,32 @@ body{
     padding: 1rem;
 }
 
+.section_banner2 {
+    height: 400px;
+  /*   background-color: orange; */
+    display: flex;
+    align-items: center;
+    justify-content:center;
+}
+
+.container_banner2{
+    height: 300px;  
+    width: 60%;
+    /* background-color: aqua; */
+    display: flex;
+}
+
 .text_banner2{
     width: 35%;
     height: 100%;
     color: var(--tb-footer);
+}
+
+.image_banner2{
+    width: 60%;
+    height: 100%;
+    margin-right: 1rem;
+    display: flex;
 }
 
 .banner_p p{
@@ -171,8 +192,7 @@ body{
 
 /* #region section main end */
 .main_end{
-    background-color: antiquewhite;
-    height: 500px;
+    margin-top: 150px;
     width: 100%;
     display: flex;
     align-items: center;
@@ -180,10 +200,35 @@ body{
 }
 
 .container-main_end{
-    background-color: #3161e0;
-    height: 450px;  
-    width: 55%;
+    
+    
+    width: 60%;
+    position: relative;
+    text-align: center;
 }
+
+.img_main_end{
+    width: 100%;
+}
+
+
+.text-main_end{
+    padding-bottom: 20px;
+}
+
+
+.download3{
+    margin-left: 10px;
+    background-color: var(--tb-bottom);
+    border-radius: 40px;
+    border: none;
+    padding: 14px;
+    color: var(--tb-light);
+    margin-top: 30px;
+    margin-bottom: 100px;
+}
+
+
 /* #endregion section main end */
 
 /* #region columns footer */
@@ -251,4 +296,5 @@ body{
     width: 35px;
 }
 /* #endregion banner footer */
+
 
