--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -159,6 +159,8 @@ body{
     padding-top: 20px;
     padding-bottom: 20px;
 }
+
+
 /* #endregion section banner */
 
 /* #region section main end */
@@ -170,9 +172,13 @@ body{
     justify-content:center;
 }
 
-.container-main_end{
-    
-    
+.stars{
+    margin-top: 50px;
+    background-image: url('../img/stars.svg');
+    height: 25px;
+}
+
+.container-main_end{  
     width: 60%;
     position: relative;
     text-align: center;
